# face_search

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  pvs-studio-cmake-example-1.cbp  pybindings  untitled  untitled.cbp
src/: FaceProvider.cpp  FaceProvider.h  FaceStorage.cpp  FaceStorage.h  FaceStorageUnittest.cpp  RecognizeService.cpp  RecognizeService.h
